# ai-recruitment-cli-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_recruitment_agent/: __init__.py  main.py
tests/: test_cli.py
