[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-recruitment-agent"
version = "0.2.0"
description = "AI-powered CV screening CLI — ranks candidates against a Job Description using Google Gemini and pushes results to Notion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "kneeraazon404" }]
keywords = ["recruitment", "cv", "screening", "gemini", "notion", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "notion-client>=2.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
ai-recruit = "ai_recruitment_agent.main:app"

[project.urls]
Homepage = "https://github.com/kneeraazon404/ai-recruitment-cli-agent"
Repository = "https://github.com/kneeraazon404/ai-recruitment-cli-agent"
Issues = "https://github.com/kneeraazon404/ai-recruitment-cli-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["ai_recruitment_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
